# nut_opt_app

./: README.md  free_select_food.py  glico.lp  opt_nutrition-Copy1.ipynb  opt_nutrition-Copy3.ipynb  opt_nutrition.ipynb  opt_nutrition.py  process_all.py  pyproject.toml  st_opt_nutrition.py
data/: food_data.csv  nutrition_data.xlsx  required_nutrition.csv
