[tool.poetry]
authors = ["ktr082 <ktr082wr@yahoo.co.jp>"]
description = ""
name = "nut_opt_app"
version = "0.1.0"

[tool.poetry.dependencies]
PuLP = "^2.4"
pandas = "^1.2.3"
plotly = "^4.14.3"
python = "^3.9"
streamlit = "^0.77.0"
watchdog = "^2.0.2"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.5"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
